--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,5 @@
 *{
-    margin:0px;
+    margin: 0;
 }
 body{
     background-color: beige;
@@ -14,9 +14,12 @@ header{
     border-radius: 10px;
     box-sizing: border-box;
     padding: 20px;
-    margin:40px;
+    margin:20px;
+    text-align: center;
+    align-items: center;
     background-color: white;
     box-shadow:rgb(218, 229, 218) 0px 3px 5px;
+    height:auto;
 }
 .product p{
     margin:10px
@@ -25,11 +28,13 @@ header{
     margin:15px
 }
 ul{
-    display:flex;
-    justify-content: center;
+    display:block;
     padding:10px;
     list-style-type: none;
-    gap:50px;
+}
+ul li{
+    margin: 10px 0;
+    text-align: center;
 }
 ul li a{
     text-decoration: none;
@@ -41,23 +46,11 @@ ul li a:hover{
     padding:5px;
 }
 main{
-    margin:130px;
+    margin:20px;
 }
-#section1{
-    display:flex;
-    justify-content: center;
-    padding:20px;
-    text-align: center;
-}
-#section2{
-    display:flex;
-    justify-content: center;
-    padding:20px;
-    text-align: center;
-}
+#section1,
+#section2,
 #section3{
-    display:flex;
-    justify-content: center;
     padding:20px;
     text-align: center;
 }
@@ -69,4 +62,29 @@ footer{
     color:white;
     padding:10px;
     text-align: center;
+}
+@media (min-width: 768px){
+    ul{
+        display:flex;
+        justify-content: center;
+        gap: 50px;
+    }
+    main{
+        margin: 130px;
+    }
+    #section1,
+    #section2,
+    #section3{
+        flex-direction: row;
+    }
+    .product{
+        margin: 40px;
+    }
+    .product-list {
+    display: flex;
+    gap: 70px;
+    justify-content: center;
+    height: auto;
+    margin: 40px 80px;
+   }
 }
